---------------------------------
MUI NList MCC classes - ChangeLog
---------------------------------

$Id$
$Source$

2004-10-03  Jens Langner <Jens.Langner@light-speed.de>,
			Sebastian Bauer <mail@sebastianbauer.info>

    * mccheader.c: Special Fun of Computing fix. Return value of
      PreClassInitFunc() was not evaluated.

2004-09-12  Jens Langner <Jens.Langner@light-speed.de>

    * all: modified all makefiles to use "-W -Wall" as the warning
      level and adapted all source files accordingly. Reactivated
      the DEBUG options in all morphos makefiles aswell as the
      debugging options can be dynamically disabled on the
      commandline by "make DEBUG=" anyway.

2004-08-26  Nicolas Sallin <henes@morphos.de>

    * All: More changes for morphos.

2004-08-25  Sebastian Bauer <mail@sebastianbauer.info>

    * NList4_func4.c: Fixed wrong disposion of mouse pointer
      objects. Bug found by Georg Steger.

2004-08-25  Nicolas Sallin <henes@morphos.de>

    * All: Changes for morphos.

2004-08-24  Sebastian Bauer <mail@sebastianbauer.info>

    * NListtree: Fixed alignment problems (the alignment enforcement
      surrounding include statements was discarded by subincludes).
      The events are now only subscribed between MUIM_Show/MUIM_Hide
      rather than MUIM_Setup/MUIM_Cleanup as otherwise MUI sends
      them even if the object is not showed (e.g. within a page).
      Frozen version 18.20 of NListtree.

2004-08-07  Jens Langner <Jens.Langner@light-speed.de>

    * nlist_mcc: fixed a rather annoying drawing bug where the
      NList class wasn't calculating the correct vertical start
      position on drawing the listview. This causes a very annoying
      "stutterting" when instantly resizing the NList surrounding
      group. However, this seems to trigger now another hided minor
      drawing bug where not all of the vertical space of the NList
      object is used. So this is something we have to look after
      aswell.
