@@ -1,5 +1,5 @@
 /*
-** This file was automatically generated by fdtrans.
+** This file was automatically generated by fdtrans 51.1.
 ** Do not edit it by hand. Instead, edit the sfd file
 ** that was used to generate this file
 */
@@ -40,6 +40,7 @@ stub_OpenPPC:
 		lhz		r12,LIB_POSSIZE(r3)
 		add		r3, r3, r12				/* by addind posSize */
 		lwz		r3, ExtLib_ILibrary(r3) /* Get the real interface pointer */
+		xor		r4,r4,r4				/* set interface version to 0 */
 
 		CallLib	lmi_Open
 		
@@ -61,6 +62,7 @@ stub_OpenPPC:
 		.align     4
 
 stub_Open68K:
+	.short     0x4a80				 /* TST.L D0 */
 	.short     0x4e75                /* RTS */
 
 
@@ -182,7 +184,8 @@ stub_MCC_QueryPPC:
 	.section .data
 	.align  4
 stub_MCC_Query68K:
-	.short	0x4e75					/* RTS */
+	.short	0x4a80					/* TST.L D0 */
+	.short	0x4e75					/* RTS      */
 
 
 	.globl Vector68K
